--- a/src/main/webapp/publico/menu.xhtml
+++ b/src/main/webapp/publico/menu.xhtml
@@ -40,19 +40,19 @@
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="circulos.png" /><a href="circulo.xhtml">Circulos
+								name="circulos.png" /><a href="../administrador/circulo.xhtml">Circulos
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 								name="palestras.png" /><a
-							href="palestra.xhtml">Palestras</a>
+							href="../administrador/palestra.xhtml">Palestras</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 								name="equipes.png" /><a
-							href="equipe.xhtml">Equipes</a>
+							href="../administrador/equipe.xhtml">Equipes</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
@@ -78,7 +78,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="montagemEquipes.png" /><a href="circulo.xhtml">Equipes
+											name="montagemEquipes.png" /><a href="../administrador/circulo.xhtml">Equipes
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
