ajustes cadastro de fichas e atividades

--- a/src/main/webapp/dirigente/ecc.xhtml
+++ b/src/main/webapp/dirigente/ecc.xhtml
@@ -25,7 +25,9 @@
 		<div id="menubar">
 			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
-				<li><a><h:graphicImage library="imagens/menu"
+				<!--
+				<li>
+					<a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
 					<ul>
 						<li><h:graphicImage library="imagens/menu"
@@ -53,7 +55,9 @@
 											name="usuarios.png" /><a
 								href="usuario.xhtml">Usuários</a>
 						</li>
-					</ul></li>
+					</ul>
+				</li>
+				-->
 				<li><a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
 					<ul>
