--- a/src/main/webapp/administrador/circulo.xhtml
+++ b/src/main/webapp/administrador/circulo.xhtml
@@ -64,7 +64,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="fichas.png" /><a href="montagemFichas.xhtml">Fichas
+											name="fichas.png" /><a href="../dirigente/montagemFicha.xhtml">Fichas
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
