--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -28,7 +28,9 @@
 		<div id="menubar">
 			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
-				<li><a><h:graphicImage library="imagens/menu"
+				<!--
+				<li>
+					<a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
 					<ul>
 						<li><h:graphicImage library="imagens/menu"
@@ -56,7 +58,9 @@
 											name="usuarios.png" /><a
 								href="usuario.xhtml">Usuários</a>
 						</li>
-					</ul></li>
+					</ul>
+				</li>
+				-->
 				<li><a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
 					<ul>
@@ -774,7 +778,7 @@
 						</p:panel>
 					</h:panelGrid>
 					<h:panelGrid columns="3">
-						<p:dataTable id="tabelaAtividades" sortBy="#{atividade.ecc.numero}"
+						<p:dataTable id="tabelaAtividades" sortBy="#{atividade.ecc.numero}" scrollable="true" scrollHeight="143"
 									 style="margin-right: 10px; width:770px;"
 									 value="#{fichaBean.ficha.atividades}" var="atividade"
 									 emptyMessage="Não há Atividades cadastradas" rowIndexVar="index">
